[package]
name = "hue-rotate"
version = "0.1.0"
authors = ["Mojo Major <info@redroostermobile.com>"]

[[bin]]
name = "hue-rotate"

[dependencies]
# image = { git = "https://github.com/RedRoosterMobile/image" , branch = "add_huerotate_to_colorops"}
image = { path = "../image" }
# image = "*"
time = "0.1.35"
